--- a/Back-end/.env
+++ b/Back-end/.env
@@ -1,6 +1,6 @@
-PORT=5000
 DB_USER=smartattendance_epsp_user
 DB_PASSWORD=r1IrjJR74GbvE5UsqKDyM0g6R98vY6Is
-DB_HOST=ldpg-d0oth2gdl3ps73aa6m1g-a
+DB_HOST=dpg-d0oth2gdl3ps73aa6m1g-a  # ✅ MUST START WITH `dpg-`
 DB_PORT=5432
 DB_DATABASE=smartattendance_epsp
+PORT=5000
