--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   path_provider: ^2.1.2
   share_plus: ^7.2.1
   excel: ^2.0.6
+  camera: ^0.10.5+9
 
 dev_dependencies:
   flutter_test:
