--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@supabase/supabase-js": "^2.49.8",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.15.6"
   }
